<feat> nginx 에 vite config js 와 일치하는 설정 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,4 +7,14 @@ server {
   location = / {
     try_files $uri $uri/ /index.html;
   }
+  location /api/items {
+    proxy_pass http://localhost:3000/api/items;
+    proxy_set_header Host $host;
+  }
+
+  location /api {
+    proxy_pass http://192.168.45.201:38081
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+  }
 }
