--- a/nginx.conf
+++ b/nginx.conf
@@ -4,17 +4,24 @@ server {
 
   root /usr/share/nginx/html;
   index index.html;
-  location = / {
-    try_files $uri $uri/ /index.html;
-  }
-  location /api/items {
-    proxy_pass http://localhost:3000/api/items;
-    proxy_set_header Host $host;
+  # 1. /malangg로 시작하는 요청은 외부 mapleland.gg로 프록시
+  location ^~ /malangg/ {
+    proxy_pass https://mapleland.gg/;
+    proxy_set_header Host mapleland.gg;
+    proxy_ssl_server_name on;
   }
 
-  location /api {
-    proxy_pass http://192.168.45.201:38081
+  # 2. /api로 시작하는 나머지 요청은 내부 Spring Boot로 프록시
+  location ^~ /api/ {
+    proxy_pass http://192.168.45.201:38081/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # 3. 그 외는 SPA 라우팅
+  location / {
+    try_files $uri $uri/ /index.html;
   }
 }
