<fix> : 배포시 화면이 보이지 않는 버그 픽스

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,5 +23,8 @@ server {
   # 3. 그 외는 SPA 라우팅
   location / {
     try_files $uri $uri/ /index.html;
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
   }
 }
