--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,14 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
+  location ^~ /oauth2/ {
+      proxy_pass http://192.168.45.201:38081;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
   # 3. 그 외는 SPA 라우팅
   location / {
     try_files $uri $uri/ /index.html;
