--- a/nginx.conf
+++ b/nginx.conf
@@ -26,9 +26,16 @@ server {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  }
 
-  # 3. 그 외는 SPA 라우팅
+  location ^~ /login/ {
+        proxy_pass http://192.168.45.201:38081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+      }
+  # 3. 그 외는 SPA 라우팅 fixme: 404 not found view 로 반환 후 url console log
   location / {
     try_files $uri $uri/ /index.html;
     add_header Cache-Control "no-cache, no-store, must-revalidate";
