--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_DISCORD_LOGIN_URL=http://39.115.66.158:38080/malan-alerter/oauth2/authorization/discord
+VITE_DISCORD_LOGIN_URL=https://malantutils.com/malan-alerter/oauth2/authorization/discord
