<hotfix> : production에서 로그인 페이지 url 오타 픽스

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_DISCORD_LOGIN_URL=https://malantutils.com/malan-alerter/oauth2/authorization/discord
+VITE_DISCORD_LOGIN_URL=https://malanutils.com/malan-alerter/oauth2/authorization/discord
