--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_DISCORD_LOGIN_URL=https://malanutils.com/malan-alerter/oauth2/authorization/discord
+VITE_DISCORD_LOGIN_URL=https://malanutil.com/malan-alerter/oauth2/authorization/discord
