--- a/.github/workflows/gitaction.yaml
+++ b/.github/workflows/gitaction.yaml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
 env:
+  MAJOR_VERSION: 1
   MINOR_VERSION: 0
 jobs:
   build-and-push-image:
@@ -44,7 +45,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.CONTAINER_REGISTRY_URL }}/malan-alerter-fe:1.${{ env.MINOR_VERSION }}.${{ steps.git-commit-sha.outputs.SHA_SHORT }}
+            ${{ secrets.CONTAINER_REGISTRY_URL }}/malan-alerter-fe:${{env.MAJOR_VERSION}}.${{ env.MINOR_VERSION }}.${{ steps.git-commit-sha.outputs.SHA_SHORT }}
           #            ${{ secrets.CONTAINER_REGISTRY_URL }}/malan-alerter-be:latest
           platforms: linux/arm64
   #          cache-from: type=registry,ref=${{ secrets.CONTAINER_REGISTRY_URL }}/malan-alerter-be:latest
@@ -63,4 +64,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/hc07car/malan-alerter
-            sh patch-fe.sh 0.${{ env.MINOR_VERSION }}.${{ needs.build-and-push-image.outputs.sha_short }}
+            sh patch-fe.sh ${{env.MAJOR_VERSION}}.${{ env.MINOR_VERSION }}.${{ needs.build-and-push-image.outputs.sha_short }}
