refactor: axios 인스턴스 통합 및 API 호출 구조 개선
- .env.production에 VITE_BASE_URL 추가, 환경변수 기반 baseURL 적용
- axios 인스턴스 생성 및 모든 API 호출을 plugins/axios.js로 통일
- 인증/토큰 갱신/에러 핸들링 로직 개선 및 라우터 연동 강화
- store, user, main 등에서 axios 직접 사용 제거 및 api 인스턴스 사용
- 코드 스타일 및 import 정리, 불필요 코드 제거
- 로그인 뷰의 디스코드 아이콘 외부 URL로 변경 및 스타일 개선

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_DISCORD_LOGIN_URL=https://malanutil.com/malan-alerter/oauth2/authorization/discord?source=alerter
+VITE_BASE_URL=https://malanutil.com/malan-alerter
