--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+# This Configuration will be overwritten in deployment.
 server {
   listen 80;
   server_name _;
@@ -19,7 +20,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
-
+  # OAuth2 인증 관련 요청은 내부 Spring Boot로 프록시
   location ^~ /oauth2/ {
       proxy_pass http://192.168.45.201:38081;
       proxy_set_header Host $host;
@@ -27,19 +28,23 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
   }
-
-  location ^~ /login/ {
+  # 디스코드에서 성공 후 로그인 콜백이 들어오는 경로
+  location ^~ /login/oauth2/ {
         proxy_pass http://192.168.45.201:38081;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-      }
-  # 3. 그 외는 SPA 라우팅 fixme: 404 not found view 로 반환 후 url console log
+  }
+
+  # Cache static assets for a long time
+  location ~* \.(?:jpg|jpeg|gif|png|webp|svg|ico|js|css)$ {
+    expires 30d;
+    add_header Cache-Control "public, immutable";
+  }
+
+  # 3. 그 외는 SPA 라우팅
   location / {
     try_files $uri $uri/ /index.html;
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
   }
 }
