--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -16,7 +17,10 @@
     "vue-toggles": "^2.2.1"
   },
   "devDependencies": {
+    "@types/node": "^25.2.0",
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
+    "typescript": "^5.9.3",
+    "vite": "^6.3.5",
+    "vue-tsc": "^3.2.4"
   }
 }
